@@ -199,6 +199,7 @@ S3method(print, residLen)
 S3method(print, residuals.bootstrap.mat)
 S3method(print, residuals.mat)
 S3method(print, roc)
+S3method(print, stdError)
 S3method(print, summary.analog)
 S3method(print, summary.bootstrap.mat)
 S3method(print, summary.cma)
